@@ -36,7 +36,8 @@ typedef void (*kernel_entry_t) (unsigned long, void *, int (void *),
 
 /* Claim the memory occupied by the multiboot kernel.  */
 grub_err_t
-grub_mb2_arch_elf32_hook (Elf32_Phdr *phdr, UNUSED grub_addr_t *addr,
+grub_mb2_arch_elf32_hook (Elf32_Phdr *phdr,
+			  grub_addr_t *addr __attribute__((unused)),
 			  int *do_load)
 {
   int rc;
@@ -61,7 +62,8 @@ grub_mb2_arch_elf32_hook (Elf32_Phdr *phdr, UNUSED grub_addr_t *addr,
 
 /* Claim the memory occupied by the multiboot kernel.  */
 grub_err_t
-grub_mb2_arch_elf64_hook (Elf64_Phdr *phdr, UNUSED grub_addr_t *addr,
+grub_mb2_arch_elf64_hook (Elf64_Phdr *phdr,
+			  grub_addr_t *addr __attribute__((unused)),
 			  int *do_load)
 {
   int rc;
